--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -15,6 +15,7 @@ RUN su aur_user -c "/bin/sh -c 'yay -S --noconfirm jlink-software-and-documentat
 
 RUN git config --global --add safe.directory /project
 
+#test
 RUN mkdir /project
 WORKDIR /project
 
