--- a/scripts/Dockerfile.kvasir
+++ b/scripts/Dockerfile.kvasir
@@ -2,6 +2,6 @@ FROM kvasirio/build_environment:latest AS kvasir_dev
 
 ENV KVASIR_ROOT=/opt/kvasir
 COPY . ${KVASIR_ROOT}/
-WORKDIR ${KVASIR_ROOT}
 RUN git config --global --add safe.directory ${KVASIR_ROOT}
-ENTRYPOINT ${KVASIR_ROOT}/scripts/entrypoint.sh
+
+ENTRYPOINT ["/opt/kvasir/scripts/entrypoint.sh"]
