--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -152,7 +152,7 @@ jobs:
             - name: Trigger chip container rebuilds
               uses: actions/github-script@v7
               with:
-                github-token: ${{ secrets.GITHUB_TOKEN }}
+                github-token: ${{ secrets.CROSS_REPO_TOKEN }}
                 script: |
                     // Array of chip repositories to trigger
                     const chipRepos = [
