--- a/scripts/Dockerfile.build-env
+++ b/scripts/Dockerfile.build-env
@@ -6,10 +6,10 @@ ARG AUR_EXTRA_PACKAGES=""
 RUN pacman --disable-download-timeout --noconfirm -Syyu && \
     pacman --disable-download-timeout --noconfirm --needed -S \
         base-devel fish llvm cmake lld git make gcc clang python sudo python-intelhex \
-        fmt nlohmann-json pugixml cli11 boost go arm-none-eabi-gdb $EXTRA_PACKAGES && \
+        fmt nlohmann-json pugixml cli11 boost go ninja arm-none-eabi-gdb lldb $EXTRA_PACKAGES && \
     groupadd -r -g 5000 aur_user && \
     useradd aur_user -u 5000 -g 5000 --create-home && \
-    echo "aur_user ALL=(ALL) NOPASSWD: /usr/bin/pacman" > "/etc/sudoers.d/allow_nobody_to_pacman" && \
+    echo "ALL ALL=(ALL) NOPASSWD: /usr/bin/pacman" > "/etc/sudoers.d/allow_nobody_to_pacman" && \
     echo "MAKEFLAGS=\"-j$(nproc)\"" >> /etc/makepkg.conf && \
     echo "OPTIONS=(strip !docs !libtool staticlibs !debug !check)" >> /etc/makepkg.conf && \
     su aur_user -c "cd ~ && git clone --depth 1 https://aur.archlinux.org/yay.git && cd yay && makepkg --noconfirm -si" && \
@@ -27,8 +27,8 @@ RUN pacman --disable-download-timeout --noconfirm -Syyu && \
            /var/lib/systemd/* /var/log/* && \
     find /usr/bin -name "*-debug" -delete 2>/dev/null || true && \
     pacman -Scc --noconfirm && \
-    git config --global --add safe.directory /workspace && \
     mkdir /workspace && \
+    git config --global --add safe.directory /workspace && \
     chmod 777 /workspace
 
 WORKDIR /workspace
