--- a/scripts/Dockerfile.build-env
+++ b/scripts/Dockerfile.build-env
@@ -3,7 +3,7 @@ FROM archlinux AS build_env
 RUN pacman --disable-download-timeout --noconfirm -Syyu && \
     pacman --disable-download-timeout --noconfirm --needed -S \
         fakeroot fish llvm cmake lld git make clang python sudo python-intelhex \
-        fmt nlohmann-json pugixml cli11 boost arm-none-eabi-gdb lldb && \
+        fmt nlohmann-json pugixml cli11 boost inja arm-none-eabi-gdb lldb && \
     groupadd -r -g 5000 aur_user && \
     useradd aur_user -u 5000 -g 5000 --create-home && \
     echo "ALL ALL=(ALL) NOPASSWD: /usr/bin/pacman" > "/etc/sudoers.d/allow_nobody_to_pacman" && \
@@ -11,7 +11,7 @@ RUN pacman --disable-download-timeout --noconfirm -Syyu && \
     echo "OPTIONS=(strip !docs !libtool staticlibs)" >> /etc/makepkg.conf && \
     echo "BUILDENV=(!check)" >> /etc/makepkg.conf && \
     su aur_user -c "cd ~ && git clone --depth 1 https://aur.archlinux.org/yay.git && cd yay && makepkg --rmdeps --noconfirm -si" && \
-    su aur_user -c "yay -S --noconfirm --disable-download-timeout --removemake jlink-software-and-documentation su-exec inja ftxui magic_enum" && \
+    su aur_user -c "yay -S --noconfirm --disable-download-timeout --removemake jlink-software-and-documentation su-exec ftxui magic_enum" && \
     rm -rf /home/aur_user/* /home/aur_user/.* /root/* /root/.* /tmp/* /var/tmp/* \
            /var/cache/* /var/lib/pacman/sync/* /var/log/* && \
     echo root | passwd --stdin && \
